# ctq

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
cmake/: ctqConfig.cmake.in
include/ctq/: circular_buffer.h  task_queue.h
test/: ctq_test.cpp
